You can now change colors and reset the grid

--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
 </head>
 
 <body>
+  <div id='buttons'>
+  <button id='black'>Black</button>
+  <button id='random'>Random</button>
+  <button id='newGrid'>Reset Grid</button>
+  </div>
   <div id='div-container'></div>
 
   <script src="script.js"></script>
