--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
 <body>
   <div id='buttons'>
-  <button id='black'>Black</button>
-  <button id='random'>Random</button>
-  <button id='newGrid'>Reset Grid</button>
+  <button id='white' class='butn'>White</button>
+  <button id='random' class='butn'>Random</button>
+  <button id='newGrid' class='butn'>Reset Grid</button>
   </div>
   <div id='div-container'></div>
 
