--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div id='buttons'>
   <button id='white' class='butn'>White</button>
   <button id='random' class='butn'>Random</button>
-  <button id='newGrid' class='butn'>Reset Grid</button>
+  <button id='newGrid' class='butn'>Clear</button>
   </div>
   <div id='div-container'></div>
 
