added extra color options

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
 <body>
   <div id='buttons'>
+  <button id='black' class='butn'>black</button>
   <button id='white' class='butn'>White</button>
   <button id='random' class='butn'>Random</button>
   <button id='newGrid' class='butn'>Clear</button>
