--- a/index.html
+++ b/index.html
@@ -13,13 +13,15 @@
 </head>
 
 <body>
-  <div id='buttons'>
-  <button id='black' class='butn'>black</button>
-  <button id='white' class='butn'>White</button>
-  <button id='random' class='butn'>Random</button>
-  <button id='newGrid' class='butn'>Clear</button>
+  <div id='wrapper'>
+    <div id='buttons'>
+    <button id='black' class='butn'>black</button>
+    <button id='white' class='butn'>White</button>
+    <button id='random' class='butn'>Random</button>
+    <button id='newGrid' class='butn'>Clear</button>
   </div>
   <div id='div-container'></div>
+  </div>
 
   <script src="script.js"></script>
 </body>
