changed the buttons to make them look better

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 <body>
   <div id='wrapper'>
     <div id='buttons'>
-    <button id='black' class='butn'>black</button>
-    <button id='white' class='butn'>White</button>
-    <button id='random' class='butn'>Random</button>
-    <button id='newGrid' class='butn'>Clear</button>
+    <a id='black' class='butn' href='#'>black</a>
+    <a id='white' class='butn' href='#'>White</a>
+    <a id='random' class='butn' href='#'>Random</a>
+    <a id='newGrid' class='butn' href='#'>Clear</a>
   </div>
   <div id='div-container'></div>
   </div>
