--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <div id='wrapper'>
     <div id='buttons'>
-    <a id='black' class='butn' href='#'>black</a>
+    <a id='black' class='butn' href='#'>Black</a>
     <a id='white' class='butn' href='#'>White</a>
     <a id='random' class='butn' href='#'>Random</a>
     <a id='newGrid' class='butn' href='#'>Clear</a>
